fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -186,9 +186,14 @@ a:visited {
     top: 25px;
     left: 15px;
   }
-  #bio .timeline ul li:nth-child(odd) .date,
-  #bio .timeline ul li:nth-child(even) .date {
+  #bio .timeline ul li:nth-child(odd) .date {
     top: -25px;
+    left: 35px;
+    right: inherit;
+  }
+
+  #bio .timeline ul li:nth-child(even) .date {
+    top: -30px;
     left: 35px;
     right: inherit;
   }
@@ -312,7 +317,7 @@ a:visited {
   content: "";
   position: absolute;
   top: 26px;
-  left: -3px;
+  left: -6px;
   width: 10px;
   height: 10px;
   background-color: white;
